[gd_scene load_steps=17 format=3 uid="uid://bu28d3vkv5xgg"]

[ext_resource type="Script" uid="uid://dfxuselnqyns0" path="res://scripts/lessons/lesson1/lo2/lo2.gd" id="1_p8s03"]
[ext_resource type="Texture2D" uid="uid://byo2g1nyeml87" path="res://assets/images/backgrounds/classroom.jpg" id="2_ka8vb"]
[ext_resource type="Texture2D" uid="uid://coeyrx0c4e2ef" path="res://assets/images/lesson1/lo2/tool3.png" id="3_xnpoy"]
[ext_resource type="Texture2D" uid="uid://v5jm7xqrxfls" path="res://assets/models/prof.png" id="4_37rag"]
[ext_resource type="FontFile" uid="uid://c5ncwdnfodc8e" path="res://assets/fonts/Rubik-Regular.ttf" id="5_soc6g"]
[ext_resource type="Texture2D" uid="uid://dq38ve1u1074y" path="res://assets/ui/button/rect_medium/rect_hover.png" id="6_3s40o"]
[ext_resource type="Texture2D" uid="uid://cye7bm7hbrw04" path="res://assets/ui/button/rect_medium/rect.png" id="7_1wbn0"]
[ext_resource type="Texture2D" uid="uid://dyat1d7hwljlx" path="res://assets/ui/panel/body/titled.png" id="8_5rsxk"]
[ext_resource type="FontFile" uid="uid://md3bneuh3f8p" path="res://assets/fonts/Rubik-Bold.ttf" id="9_slh1g"]
[ext_resource type="Script" uid="uid://b5xd7m84s4vg2" path="res://scripts/lessons/lesson1/lo2/lo2_quiz.gd" id="10_4tlur"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdfq6"]
texture = ExtResource("6_3s40o")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxdue"]
texture = ExtResource("7_1wbn0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dojl"]
texture = ExtResource("7_1wbn0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hqe8s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0x7v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_imsk6"]

[node name="LO2" type="Node2D"]
script = ExtResource("1_p8s03")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ka8vb")
metadata/_edit_lock_ = true

[node name="ToolPreview" type="Sprite2D" parent="."]
position = Vector2(138.5, -138.5)
texture = ExtResource("3_xnpoy")

[node name="Prof" type="Sprite2D" parent="."]
scale = Vector2(1.375, 1.375)
texture = ExtResource("4_37rag")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ChoicesBox" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/ChoicesBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Answer1" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_soc6g")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Let's go"

[node name="Answer2" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_soc6g")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Review again"

[node name="Answer3" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_soc6g")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Not yet"

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -330.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Background" type="NinePatchRect" parent="CanvasLayer/UI/DialogueBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("8_5rsxk")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/DialogueBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Name" type="Label" parent="CanvasLayer/UI/DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_slh1g")
theme_override_font_sizes/font_size = 50
text = "Prof"

[node name="Dialogue" type="RichTextLabel" parent="CanvasLayer/UI/DialogueBox/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Iâ€™m [Teacher Name], your guide and mentor as you begin your journey into the world of computer hardware and electronics."
fit_content = true
autowrap_mode = 2

[node name="Next" type="Button" parent="CanvasLayer/UI/DialogueBox"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_hqe8s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a0x7v")
theme_override_styles/normal = SubResource("StyleBoxTexture_imsk6")

[node name="QuizUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_4tlur")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/QuizUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/QuizUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_slh1g")
theme_override_font_sizes/font_size = 96
text = "QUIZ"
horizontal_alignment = 1

[node name="Question" type="Label" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "6. Micro electronic circuits consisting of semiconductor devices and passive components built onto a single chip."
autowrap_mode = 2

[node name="Choices" type="HBoxContainer" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Choices1" type="VBoxContainer" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices"]
layout_mode = 2

[node name="A" type="TextureRect" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices1"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
expand_mode = 1

[node name="LabelA" type="Label" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Electrical Tape"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Choices2" type="VBoxContainer" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices"]
layout_mode = 2

[node name="B" type="TextureRect" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
expand_mode = 1

[node name="LabelB" type="Label" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Electrical Tape"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Choices3" type="VBoxContainer" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices"]
layout_mode = 2

[node name="C" type="TextureRect" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices3"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
expand_mode = 1

[node name="LabelC" type="Label" parent="CanvasLayer/QuizUI/MarginContainer/VBoxContainer/Choices/Choices3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Electrical Tape"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="CanvasLayer/UI/ChoicesBox/VBoxContainer/Answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/ChoicesBox/VBoxContainer/Answer2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/ChoicesBox/VBoxContainer/Answer3" to="." method="_on_answer_3_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/DialogueBox/Next" to="." method="_on_pressed"]
